--- a/Yoplet/site/screen.css
+++ b/Yoplet/site/screen.css
@@ -14,11 +14,11 @@ body {
 }
 
 .content {
-    background-color: #C1C0C2;
     font-size: 12px;
     padding: 12px;
     margin-bottom: 4px;
     font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
+    background-image: url("/fond.png")
 }
 
 .footer {
