*** empty log message ***

--- a/Yoplet/web/y0pl3t/app/views/Application/index.html
+++ b/Yoplet/web/y0pl3t/app/views/Application/index.html
@@ -175,7 +175,7 @@ $(document).ready(function() {
 	$('button.upload').click(function(){
 		var files = [];
  		$('input:checked').each(function(index){
-			files.push($(this).text());
+			files.push($(this).val());
 		});
 		
 		var json = $.toJSON(files);
