--- a/Yoplet/web/y0pl3t/app/views/main.html
+++ b/Yoplet/web/y0pl3t/app/views/main.html
@@ -24,7 +24,7 @@
         #{get 'moreScripts' /}
     </head>
     <body>
-		<div class="ui-widget row" style="position:relative;float:left;">
+		<div class="ui-widget row" style="position:relative;width:800px;margin:0 auto;">
 		<header style="width:100%;">
 			<!--
 			<nav class="ui-widget-content">
