--- a/Yoplet/web/y0pl3t/app/views/Application/index.html
+++ b/Yoplet/web/y0pl3t/app/views/Application/index.html
@@ -92,8 +92,7 @@ var root = undefined;
 
 function handleDeletionOK(result) {
 	var hash = result.md5;
-	$('#'+hash).hide('explode',{},500,function(){
-	});
+	$('#'+hash).fadeOut('slow');
 }
 
 function handleDeletionKO(result) {
@@ -106,7 +105,7 @@ function handleUploadOK(result) {
 		//console.log('deleting File ', $(this).text());
 		if (confirm(' Are you sure you wanna delete uploaded file ' + result.path)) {
 			//console.log('json',$.toJSON([$(this).text()]));
-			document.yoplet.performDelete($.toJSON([$(this).text()]));
+			document.yoplet.performDelete($.toJSON([result.path]));
 		}
 	});
 }
